infrastructure-as-code/kubernetes/applications/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          # TODO:  add version
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: download
              mountPath: /downloads
            - name: movies
              mountPath: /movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: download
          persistentVolumeClaim:
            claimName: download
        - name: movies
          persistentVolumeClaim:
            claimName: media
